Fix text alignment in config forms

--- a/src/BusinessLogic/Resources/scss/app.scss
+++ b/src/BusinessLogic/Resources/scss/app.scss
@@ -191,8 +191,8 @@
       margin-right: 0;
     }
 
-    .pl-text-center {
-      text-align: center;
+    .pl-page-info {
+      text-align: left;
     }
   }
 
